--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -192,7 +192,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-    needs: [linux, musllinux, windows, macos, sdist]
+    needs: [manylinux_2_17, manylinux_2_34, musllinux, windows, macos, sdist]
     permissions:
       # Use to sign the release artifacts
       id-token: write
