--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -73,6 +73,15 @@ jobs:
             target: ppc64le
     steps:
       - uses: actions/checkout@v4
+      - name: Install cross-compilation toolchains
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            gcc-multilib \
+            crossbuild-essential-arm64 \
+            crossbuild-essential-armhf \
+            gcc-s390x-linux-gnu \
+            gcc-powerpc64le-linux-gnu
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
