--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -91,9 +91,10 @@ jobs:
         with:
           python-version: 3.x
       - name: Build wheels
-        uses: PyO3/maturin-action@v1.46.0
+        uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
+          before-script-linux: 'pip --version || python3 -m ensurepip'
           args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: 2_34
