--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -94,9 +94,9 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          before-script-linux: 'pip --version || python3 -m ensurepip'
           args: --release --out dist --find-interpreter
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          #sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          sccache: false
           manylinux: 2_34
       - name: Upload wheels
         uses: actions/upload-artifact@v4
