--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,7 +76,11 @@ jobs:
       - name: Install cross-compilation toolchain
         run: |
           sudo apt-get update
-          if [ "${{ matrix.platform.target }}" = "x86" ] || [ "${{ matrix.platform.target }}" = "x86_64" ]; then
+          if [ "${{ matrix.platform.target }}" = "x86" ] ; then
+            sudo apt-get install -y gcc-multilib \
+            libc6-dev-i386 \
+            linux-libc-dev:i386
+          if [ "${{ matrix.platform.target }}" = "x86_64" ] ; then
             sudo apt-get install -y gcc-multilib
           elif [ "${{ matrix.platform.target }}" = "aarch64" ]; then
             sudo apt-get install -y crossbuild-essential-arm64
