--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -80,7 +80,7 @@ jobs:
             sudo apt-get install -y gcc-multilib \
             libc6-dev-i386 \
             linux-libc-dev:i386
-          if [ "${{ matrix.platform.target }}" = "x86_64" ] ; then
+          elif [ "${{ matrix.platform.target }}" = "x86_64" ] ; then
             sudo apt-get install -y gcc-multilib
           elif [ "${{ matrix.platform.target }}" = "aarch64" ]; then
             sudo apt-get install -y crossbuild-essential-arm64
